[package]
name = "weather_hist_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
xml-rs = "0.8"
# chrono = "0.4.26"
rusqlite = { version = "0.29.0", features = ["bundled"] }

